# TRex_Printer_API

./: .gitignore  TRex_Printer_API.sln
TRex_Printer_API/: APIcheck.py  README.md  TRex_Printer_API.pyproj  pyproject.toml
TRex_Printer_API/src/trexprinterapi/: API.py  __init__.py  utils.py
TRex_Printer_API/trexprinterapi/: API.py  patterns.py  utils.py
