[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TRex_Printer_API"
version = "0.0.1"
authors = [
  { name="Christian", email="" },
]
description = "Project to make API for Bresser 3D printer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Chris112358/TRex_Printer_API"
"Bug Tracker" = "https://github.com/Chris112358/TRex_Printer_API/issues"